[package]
name = "echo_bot"
version = "0.1.0"
authors = ["Daniel Temiagin <daniel.temiagin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10"}
env_logger = "0.8.3"
